tests/machine/x/c/test_block.c
// Generated by Mochi compiler v0.10.27 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

static int test_addition_works_x;
static void test_addition_works() {
  int x = 1 + 2;
  if (!(test_addition_works_x == 3)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int _mochi_main() {
  printf("ok\n");
  test_addition_works_x = x;
  test_addition_works();
  return 0;
}
int main() { return _mochi_main(); }
